cmake_minimum_required(VERSION 3.9)
project(CppLearning)

set(CMAKE_CXX_STANDARD 11)

add_executable(CppLearning
        #[[static_test.cpp]]
        #[[sizeof_test.cpp]]
        #[[signed_test.cpp]]
        #[[extern_test1.cpp extern_test2.cpp]]
        #[[struct_test.cpp]]
#        union_test.cpp

        pointer/PointerTest1.cpp)